css/home.scss
---
---

header {
	&.heroic {
		background-color: transparent;
		
		&:not(.show-nav) a::after {
			top: 0; bottom: auto;
		}
	}
	
	transition: .125s background-color ease-in-out;
}

header + section {
	padding-top: 0;
}

div#superhero {
	display: flex;
	
	min-height: 32rem;
	
	height: 100vh;
	
	background-image: linear-gradient(var(--overlay-color), var(--overlay-color)), url("/assets/Banner.jpg");
	background-color: black;
	background-position: center;
	background-size: cover;
	
	flex-direction: column;
	
	justify-content: center;
	align-items: center;
	
	& > * {
		max-width: 24rem;
		
		text-align: center;
	}
	
	h2 {
		font-size: 2.5rem;
	}
	
	p {
		margin-top: 0;
		
		font-size: 1.25rem;
		line-height: 1.5em;
	}
	
	h2, p {
		margin: .5rem;
	}
}

/* Profile Picture */
div#profile-container {
	float: left;
	
	width: 5rem;
	height: 5rem;
	
	img#profile {
		border: solid var(--thin-border-size) var(--overlay-color);
		border-radius: .5rem;
		
		width: 5rem;
		height: 5rem;
		
		// box-shadow: 0 .375rem .25rem -.25rem #1f1f1f;
	}
	
	&:hover img#profile {
		animation: helloFriend 2s ease-in-out;
	}
}

/* Animations */
@keyframes helloFriend {
	/* First, shift to left! */
	0% {
		transform-origin: left bottom;
		transform: rotate(0deg);
	}
	6.25% {
		transform: rotate(-15deg);
	}
	12.49999% {
		transform-origin: left bottom;
	}
	/* Then, shift to right! */	
	12.50001% {
		transform-origin: right bottom;
	}
	18.75% {
		transform: rotate(15deg);
	}
	24.99999% {
		transform-origin: right bottom;
		transform: rotate(0deg);
	}
	/* Finally, do a flip! */	
	25.00001% {
		transform-origin: center bottom;
	}
	50% {
		transform: translateY(-2rem) rotateX(90deg);
	}
	/* 62.5% {
		transform: translateY(-.5rem) rotateX(90deg);
	} */
	60% {
		transform-origin: center center;
		transform: translateY(0) rotateX(180deg);
	}
	75% {
		transform: rotateX(180deg);	
	}
	/* Oh whoops... Go back to normal. */
	77.5% {
		transform: rotate(-5deg) rotateX(180deg);
	}
	80% {
		transform: rotateX(180deg);
	}
	87.5% {
		transform: rotateX(-15deg);
	}
	100% {
		transform: rotateX(0deg);
	}
}

.caution {
	background-image: repeating-linear-gradient(15deg, black 0rem, black 4rem, yellow 4rem, yellow 8rem);
}

